# locali-ci

./: CHANGELOG.md  CHAOS.md  Cargo.toml  README  README.md  bacon.toml  example.toml  limmat.schema.json  limmat.toml  local-ci.schema.json  local-ci.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: linux-kernel.toml
src/: config.rs  dag.rs  database.rs  flock.rs  git.rs  http.rs  integration_test.rs  lib.rs  main.rs  pool.rs  process.rs  resource.rs  result.rs  status.rs  terminal.rs  test.rs  test_utils.rs  text.rs  ui.rs  util.rs
supply-chain/: audits.toml  config.toml
tests/: integration_test.rs
