[package]
name = "local-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.79"
crossbeam-channel = "0.5.11"
nix = { version = "0.28.0", features = ["process", "signal", "fs", "feature"] }
cancellation-token = "0.1.0"
tempfile = "3.10.1"
inotify = "0.10.2"