[package]
name = "local-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.79"
nix = { version = "0.28.0", features = ["process", "signal", "fs", "feature"] }
cancellation-token = "0.1.0"
tempfile = "3.10.1"
notify = "6.1"
futures-core = "0.3.30"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
async-channel = "2.2"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
test-log = "0.2"