[package]
name = "local-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.79"
nix = { version = "0.28.0", features = ["process", "signal", "fs", "feature"] }
tempfile = "3.10.1"
notify = "6.1"
futures-core = "0.3.30"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
env_logger = "0.11"
log = "0.4"
async-condvar-fair = { version = "1.0", features = [ "parking_lot_0_12" ] }
# https://docs.rs/async-condvar-fair/latest/async_condvar_fair/#mutex-guard-sending-between-threads
parking_lot = {version = "0.12", features = ["send_guard"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0.1"
regex = "1.10.6"
lazy_static = "1.5.0"
ansi-control-codes = "1.0.1"
colored = "2.1.0"
strip-ansi-escapes = "0.2.0"
chrono = "0.4.38"
serde_json = "1.0.128"
itertools = "0.13.0"
axum = { version = "0.7.7", features = ["http1"] }
tower-http = { version = "0.6.1", features = ["fs"] }
subenum = "1.1.2"

[dev-dependencies]
test-case = "3.3"
test-log = "0.2"
test_bin = "0.4"
glob = "0.3"
googletest = "0.12.0"
